added rewards and admin management

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ SUMSUB_SECRET_KEY=your-sumsub-secret-key
 SUMSUB_BASE_URL=https://api.sumsub.com
 
 # Blockchain RPC URLs
-# EVM Networks
+# EVM Networks - Mainnet
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR-PROJECT-ID
 POLYGON_RPC_URL=https://polygon-rpc.com
 BSC_RPC_URL=https://bsc-dataseed.binance.org
@@ -64,20 +64,31 @@ OPTIMISM_RPC_URL=https://mainnet.optimism.io
 AVALANCHE_RPC_URL=https://api.avax.network/ext/bc/C/rpc
 BASE_RPC_URL=https://mainnet.base.org
 
+# EVM Networks - Testnet (for development)
+ETHEREUM_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR-API-KEY
+POLYGON_AMOY_RPC_URL=https://rpc-amoy.polygon.technology
+BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
+ARBITRUM_SEPOLIA_RPC_URL=https://arb-sepolia.g.alchemy.com/v2/YOUR-API-KEY
+OPTIMISM_SEPOLIA_RPC_URL=https://opt-sepolia.g.alchemy.com/v2/YOUR-API-KEY
+AVALANCHE_FUJI_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
+BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/YOUR-API-KEY
+
 # Solana Network
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
-# For devnet testing: https://api.devnet.solana.com
+SOLANA_TESTNET_RPC_URL=https://api.devnet.solana.com
 # For faster RPC: https://solana-api.projectserum.com
 # Or use paid providers like QuickNode, Alchemy, Helius
 
 # TON Network
 TON_RPC_URL=https://toncenter.com/api/v2/jsonRPC
+TON_TESTNET_RPC_URL=https://testnet.toncenter.com/api/v2/jsonRPC
 TON_API_KEY=your-toncenter-api-key
-# For testnet: https://testnet.toncenter.com/api/v2/jsonRPC
+TON_TESTNET_API_KEY=your-testnet-toncenter-api-key
 # Get API key from: https://tonconsole.com
 
-# SUI Network (Placeholder for future implementation)
+# SUI Network
 SUI_RPC_URL=https://fullnode.mainnet.sui.io
+SUI_TESTNET_RPC_URL=https://fullnode.testnet.sui.io
 # For devnet: https://fullnode.devnet.sui.io
 
 # Master Key Encryption (for secure storage of private keys)
