--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@scure/bip32": "^2.0.1",
     "@scure/bip39": "^2.0.1",
     "@sendgrid/mail": "^8.1.6",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "@ton/core": "^0.62.0",
     "@ton/crypto": "^3.3.0",
