--- a/smart-contracts/.env.example
+++ b/smart-contracts/.env.example
@@ -4,7 +4,7 @@ DEPLOYER_PRIVATE_KEY=your_private_key_here
 # Hot wallet address that will receive payments
 HOT_WALLET_ADDRESS=0x...
 
-# Testnet RPC URLs
+# EVM Testnet RPC URLs
 ETHEREUM_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_API_KEY
 POLYGON_MUMBAI_RPC_URL=https://polygon-mumbai.g.alchemy.com/v2/YOUR_API_KEY
 BSC_TESTNET_RPC_URL=https://data-seed-prebsc-1-s1.binance.org:8545
@@ -13,7 +13,17 @@ OPTIMISM_SEPOLIA_RPC_URL=https://opt-sepolia.g.alchemy.com/v2/YOUR_API_KEY
 AVALANCHE_FUJI_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
 BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/YOUR_API_KEY
 
-# Mainnet RPC URLs (only uncomment when ready for production)
+# Non-EVM Testnet RPC URLs
+SOLANA_TESTNET_RPC_URL=https://api.devnet.solana.com
+# Or use paid providers: https://devnet.helius-rpc.com/?api-key=YOUR_KEY
+
+TON_TESTNET_RPC_URL=https://testnet.toncenter.com/api/v2/jsonRPC
+TON_TESTNET_API_KEY=your-testnet-toncenter-api-key
+# Get API key from: https://tonconsole.com
+
+SUI_TESTNET_RPC_URL=https://fullnode.testnet.sui.io
+
+# EVM Mainnet RPC URLs (only uncomment when ready for production)
 # ETHEREUM_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY
 # POLYGON_RPC_URL=https://polygon-mainnet.g.alchemy.com/v2/YOUR_API_KEY
 # BSC_RPC_URL=https://bsc-dataseed1.binance.org
@@ -21,6 +31,12 @@ BASE_SEPOLIA_RPC_URL=https://base-sepolia.g.alchemy.com/v2/YOUR_API_KEY
 # OPTIMISM_RPC_URL=https://opt-mainnet.g.alchemy.com/v2/YOUR_API_KEY
 # AVALANCHE_RPC_URL=https://api.avax.network/ext/bc/C/rpc
 # BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/YOUR_API_KEY
+
+# Non-EVM Mainnet RPC URLs (uncomment when ready for production)
+# SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+# TON_RPC_URL=https://toncenter.com/api/v2/jsonRPC
+# TON_API_KEY=your-mainnet-toncenter-api-key
+# SUI_RPC_URL=https://fullnode.mainnet.sui.io
 
 # Block explorer API keys (for contract verification)
 ETHERSCAN_API_KEY=your_etherscan_api_key
